turtleart.square.Square.scala.error
Compilation error:
Square:4: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  right()
  ^